# llm-wiki-agent

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agent/: __init__.py  bases_writer.py  config.py  evidence_retriever.py  file_utils.py  ingest_worker.py  jsonl_store.py  main.py  manifest.py  openxml_parser.py  patch_manager.py  policies.py  qmd_client.py  query_decomposer.py  raw_scanner.py  status.py  telegram_bot.py  timeutils.py  wiki_updater.py  wiki_writer.py
config/examples/: env.example  qmd.yaml  rclone-filter
docs/: README.md
scripts/: check-vault-health.sh  entrypoint.sh  sync-drive.sh
tests/: test_bases_writer.py  test_evidence_retriever.py  test_ingest_worker.py  test_patch_manager.py  test_policies.py  test_qmd_client.py  test_query_decomposer.py  test_raw_scanner.py  test_telegram_bot.py  test_telegram_upload.py  test_update_commands.py
