[project]
name = "llm-wiki-agent"
version = "0.1.0"
description = "Telegram-driven local wiki agent for Google Drive synchronized Obsidian vaults."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "Pillow>=10.0",
  "python-pptx>=0.6.22",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.ruff]
line-length = 100
target-version = "py312"
